# app/Http/Requests/DeleteAppointmentRequest.php
@@ -1,18 +1,0 @@
-<?php
-
-namespace App\Http\Requests;
-
-use Illuminate\Foundation\Http\FormRequest;
-
-class DeleteAppointmentRequest extends FormRequest
-{
-    public function authorize(): bool
-    {
-        return $this->user()->can('delete', $this->route('appointment'));
-    }
-
-    public function rules(): array
-    {
-        return [];
-    }
-}
